fix spacing of network link on mobile

--- a/src/css/community.less
+++ b/src/css/community.less
@@ -1,6 +1,15 @@
 body.community {
   .has-banner;
 
+  .network {
+    .title-text;
+    .proxima-nova-light;
+    &, a { color: white; }
+    @media (max-width: @screen-xs-max) {
+      margin-top: 4px;
+    }
+  }
+
   .tabs.hide-projects a {
     width: 33.33%;
 
