--- a/src/css/mixins/has-banner.less
+++ b/src/css/mixins/has-banner.less
@@ -41,12 +41,6 @@
       }
     }
 
-    .network {
-      .title-text;
-      .proxima-nova-light;
-      &, a { color: white; }
-    }
-
     .logo {
       width: 80px;
       height: 80px;
